# agentic_researcher

./: .gitignore  .sample_env  README.md  pyproject.toml
src/agentic_researcher/: __init__.py  cli.py  deps.py  graph.py  state.py
src/agentic_researcher/agents/: editor.py  fireside_chat.py  planning.py  proofreader.py  researcher.py  survey.py  writer.py
src/agentic_researcher/models/: __init__.py
src/agentic_researcher/utils/: file_utils.py  multiline_input.py  search.py  settings.py
tests/: test_multiline_input.py  test_settings.py  test_state.py  test_workflow.py
